# poker-teacher

./: CRUSH.md  Cargo.toml  MOBILE_DEPLOYMENT_CHECKLIST.md  POKER_GAME_CHECKLIST.md  README.md  TESTING_SOLUTION_SUMMARY.md  TESTING_STRATEGY.md  UI_TESTING_README.md  mobile.toml  quick_ios.sh  run_ios_sim.sh  simple_ui_test.sh  test_game.sh
.crush/: crush.db  crush.db-shm  crush.db-wal
src/: ai_player.rs  animations.rs  audio.rs  betting.rs  betting_ui.rs  cards.rs  game_controller.rs  game_speed.rs  game_state.rs  haptics.rs  lib.rs  lifecycle.rs  main.rs  main_simple.rs  mobile_cards.rs  mobile_ui.rs  player.rs  poker_rules.rs  rendering.rs  teaching.rs  touch_input.rs  ui.rs
tests/: integration_tests.rs  poker_tests.rs  ui_integration_tests.rs
